Correct logstash.conf

--- a/pipeline/logstash.conf
+++ b/pipeline/logstash.conf
@@ -1,14 +1,14 @@
 input {
   google_pubsub {
     type => "pubsub"
-    project_id => "possible-enigma-370216"
-    topic => "demo-logstash"
-    subscription => "demo-logstash-sub"
+    project_id => "<your_project_id>"
+    topic => "<your_topic_name>"
+    subscription => "<your_subscription_name>"
     #json_key_file => "/usr/share/logstash/key/key.json"
     codec => "json"
   }
 }
-
+#Change output file if required
 output {
   stdout {
     codec => rubydebug
